fix(calendar): read the first day of week from the device on apple targets